--- a/q/13.html
+++ b/q/13.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Embroidery flower bud lace flower applique-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Embroidery flower bud lace flower applique size: 30cm * 25cmgum : None, sewing is requiredcolor :This whitematerail :polyester yarn">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
