--- a/q/15.html
+++ b/q/15.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Embroidered water-soluble lace fabric, hand sewn cheongsam, heavy industry subsidy, ethnic peony flowers in stock supply.">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
