--- a/q/18.html
+++ b/q/18.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="It will make your clothes look beautiful and unique, if you sewing the flowers embroidery lace neckline collar appliques on the clothesMaterial: polyester/fabric; Color: Pink&amp;wine red and brown; Only use of sewing(have no glue on back, do not iron on)Size: Approx.full 18cm width x 43cm l">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
