--- a/q/28.html
+++ b/q/28.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Cartoon Rabbit Astronaut-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Cartoon rabbit astronaut embroidered fabric patch cute self-adhesive clothing decoration patch patchSize in cm">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
