--- a/q/30.html
+++ b/q/30.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Cartoon Panda Cute Embroidered Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Cartoon Panda Cute Embroidered Cloth StickerComputer Embroidery Seal DIY Bag Decoration Cloth Patch PatchComplete set (6 styles in total) $:9.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
