--- a/q/32.html
+++ b/q/32.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Cartoon flower butterfly embroidered fabric patch-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Embroidered badges, cartoons, flowers, butterflies, embroidered fabrics, DIY bags, decorative stickers, clothing patches, wholesale stickersComplete set (13 styles in total) $:29.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
