--- a/q/36.html
+++ b/q/36.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Embroidered small daisies, embroidered fabric stickers, cute self-adhesive stickers, DIY bags, decorative clothes, patch stickers wholesale">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
