--- a/q/37.html
+++ b/q/37.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Cute little tiger embroidery patch-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Cute Little Tiger Embroidery Patch DIY Phone Case Clothing Accessories Decoration Cartoon Cloth Patch Patch Complete set (9 styles in total) $:29.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
