--- a/q/38.html
+++ b/q/38.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Privacy Policy-Blog-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Privacy PolicyThis privacy policy covers zalalaa.com and its associated mirrors.EmailWe will not give away your email address to anyone, who is not related to the operations of zalalaa.com. We will also never ask you to send us any of your passwords via email.LogfilesMost mirrors maintain standard l">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
