--- a/q/39.html
+++ b/q/39.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Twelve Zodiac Embroidered Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Twelve zodiac embroidered fabric patch clothing pants denim decoration repair Ding sticker animal pattern children&#39;s patch">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
