--- a/q/40.html
+++ b/q/40.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Hundreds of birds face fengbu cloth embroidery cloth-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Hundreds of birds facing fengbu paste embroidery cloth supplements clothing pattern hole attachment decorative decal patchesComplete set (20 styles in total) $:69.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
