--- a/q/42.html
+++ b/q/42.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Bee Butterfly Ironing Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Bee Butterfly Ironing Sticking Insect Patch Sticker Embroidery Sticker Embroidery Color StickerComplete set (17 styles in total) $:39.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
