--- a/q/43.html
+++ b/q/43.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Skeleton embroidered cloth sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Skeleton embroidered cloth with large embroidered clothes patch sticker cartoon anime avatar wholesale">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
