--- a/q/45.html
+++ b/q/45.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Embroidery Gesture Patch Fashion DIY Dress Patch-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Small Cartoon Cloth Embroidery Gesture Patch Fashion Clothes Patch Accessories Decorative Paste Complete set (7 styles in total) $:39.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
