--- a/q/46.html
+++ b/q/46.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Skeleton Finger Ghost Head Embroidered Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Skull Finger Ghost Head Embroidery Cloth Embroidery Embroidery Emblem Badge Patch Apparel AccessoriesComplete set (9 styles in total) $:39.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
