--- a/q/48.html
+++ b/q/48.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Cartoon Cubs Embroidered Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Cartoon Cubs embroidered cloth affixed garment decoration epaulettesComplete set (16 styles in total) $:49.99Large Complete set (8 styles in total) $:29.99Trumpet Complete set (8 styles in total) $:19.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
