--- a/q/50.html
+++ b/q/50.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Embroidery cloth paste wholesale-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Embroidery cloth paste wholesale small patch decal personality cute children&#39;s clothing accessories clothing bag hat accessoriesComplete set (9 styles in total) $:39.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
