--- a/q/54.html
+++ b/q/54.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Cartoon flower cloth embroidery patch-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Cartoon Flower Cloth Embroidery Patch Subsidy 14 FlowersComplete set (14 styles in total) $:39.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
