--- a/q/55.html
+++ b/q/55.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Fruit and vegetable embroidery-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Embroidery Embroidery Embroidery Embroidery Embroidery Embroidery Embroidery Apparel Accessories Accessories Accessories AccessComplete set (32 styles in total) $:69.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
