--- a/q/58.html
+++ b/q/58.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Cute Five Star Embroidery Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Cute Five Star Embroidery Cloth Embroidered Cartoon Patch Embroidered Embroidery Embellishment Color Five Star Fabric.Complete set (36 styles in total) $:59.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
