--- a/q/59.html
+++ b/q/59.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Multi-coloured small flowers embroidered cartoon cloth affixed children&#39;s clothes decoration patches patches decoration.Complete set (22 styles in total) $:29.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
