--- a/q/60.html
+++ b/q/60.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Multicoloured flowers embroidery patch decoration-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Multi-coloured flower cloth embroidery patch decoration decoration.Complete set (9 styles in total) $:29.99Size: wide 6.5cm high 5.7cm">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
