--- a/q/62.html
+++ b/q/62.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Five Star Embroidery Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Five Star Embroidery Cloth Pants Hat Repair Decoration Mini Trumpet Decal Five Star Multi-Color DIY PatchComplete set (35 styles in total) $:39.99重：Weight">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
