--- a/q/64.html
+++ b/q/64.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Mid-Autumn Element Rabbit Embroidery Cloth Stic-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Mid-Autumn Elements Rabbit Embroidery Cloth Tote Bag Decoration Antique Flower Embroidery Suit Loading Auxiliary MaterialsComplete set (4 styles in total) $:19.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
