--- a/q/67.html
+++ b/q/67.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Cute Flowers Butterfly Embroidery Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Cute Flowers Butterfly Embroidered Cloth Embroidered Embroidered Applique Cloth Package Embellished Garment Ding Paste Wholesale.Complete set (13 styles in total) $:39.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
