--- a/q/68.html
+++ b/q/68.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Planet Cartoon Astronaut Embroidered Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Embroidery Planet Cartoon Astronaut Embroidery Cloth Sticky DIY Package Packaging Garment Patch Patch Wholesale.Complete set (18 styles in total) $:49.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
