--- a/q/70.html
+++ b/q/70.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Bear Head Cartoon Animal Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Embroidery bearhead cartoon animal cloth cloth accessory patch clothing accessory handbill self-paste cloth.Complete set (8 styles in total) $:29.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
