--- a/q/9.html
+++ b/q/9.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
