--- a/q/abouts/index.html
+++ b/q/abouts/index.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Zalalaa-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.Fashion and high quality lace make customers extraordina">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
