--- a/q/contact/index.html
+++ b/q/contact/index.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>contacts-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Email: web@zalalaa.comQ Q: 9050150WeChat:qq9050150Address:NO.5, Dongping Square, Lecong Town, Shunde, Foshan, Guangdong,China">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
