--- a/q/hot/index.html
+++ b/q/hot/index.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Hot sales-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Hand sewn embroidery, three-dimensional embroidery, animal cloth stickers, hand nailed flower embroidery badges, cheongsam animals">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
