--- a/q/order/index.html
+++ b/q/order/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
+        <title>Order dynamics-Arts, Crafts &amp; Sewing-zlalaa</title>
         <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
