--- a/q/16.html
+++ b/q/16.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Embroidered lace cover, floral cloth patch, large peony embroidered water soluble set">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
