--- a/q/20.html
+++ b/q/20.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Skull cloth patch-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Your clothes can be so gorgeous">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
