--- a/q/23.html
+++ b/q/23.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
