--- a/q/25.html
+++ b/q/25.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Cute cartoon puppy embroidered fabric patch for down jacket-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Cute cartoon puppy embroidered fabric patch for down jacket">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
