--- a/q/26.html
+++ b/q/26.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth PatchComplete set (6 styles in total) $:19.99Size in cm">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
