--- a/q/27.html
+++ b/q/27.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickersAnimal Avatar Series (11 in total) $19.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
