--- a/q/29.html
+++ b/q/29.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth PatchComplete set (15 styles in total) $:19.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
