--- a/q/31.html
+++ b/q/31.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Cute cartoon cat-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Cute cartoon cat embroidered badge, clothing decoration patch, down jacket patch, cloth patchComplete set (4 styles in total) $:9.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
