--- a/q/34.html
+++ b/q/34.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Ice cream cake embroidered cloth patch-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Ice cream cake embroidered fabric sticker self-adhesive clothing accessories candy sticker clothing patch stickerComplete set (9 styles in total) $:19.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
