--- a/q/47.html
+++ b/q/47.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Cartoon rabbit cat wing cloth-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Cartoon Rabbit Cat Wing Cloth Decorative Clothing SubsidyComplete set (19 styles in total) $:49.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
