--- a/q/49.html
+++ b/q/49.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Cartoon shoes embroidered cloth sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Cartoon Shoes Embroidery Cloth Sticker Fashion Embroidery Glue Patch Patch Small Size PatchComplete set (7 styles in total) $:29.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
