--- a/q/51.html
+++ b/q/51.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Flamingo Embroidery Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Flamingo Patch Subsidy Computer Embroidered Embroidered Emblazoned Cloth Apparel Decoration Mend EmbroideredComplete set (16 styles in total) $:69.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
