--- a/q/52.html
+++ b/q/52.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Sailboat series embroidery cloth stickers-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Sailing Series Badge Back Adhesive Patch Cap Badge Shoe Hat Accessories Embroidery Cloth StickerComplete set (19 styles in total) $:69.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
