--- a/q/53.html
+++ b/q/53.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Leaf embroidery cloth sticker can be ironed hand stitch patch-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Foliage embroidery cloth can be ironed hand stitch patch box bag Hat trumpet foliage Children&#39;s embroidery sealLarge leaves + small leaves Complete set (32 styles in total) $:69.99 Large leaves Complete set (16 styles in total) $:39.99Small leaves Complete set (16 styles in total) $:36.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
