--- a/q/56.html
+++ b/q/56.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Butterfly Embroidery Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Butterfly Embroidery Cloth Embroidered Cartoon Patch Embroidered Floral Applique Color Butterfly FabricComplete set (37 styles in total) $:69.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
