--- a/q/57.html
+++ b/q/57.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Panda Embroidery Cloth Sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Cute panda Embroidery Cloth Embroidered Cartoon Patch Embroidery Embellishment Color panda Cloth.Complete set (16 styles in total) $:59.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
