--- a/q/61.html
+++ b/q/61.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Cartoon animal bear head embroidery cloth sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Cartoon animal embroidery cloth affixed bear head embroidery decal subsidy decoration subsidy.Complete set (12 styles in total) $:39.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
