--- a/q/69.html
+++ b/q/69.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Arts, Crafts &amp;Sewing-zlalaa</title>
-        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <title>Embroidery bear cartoon animal embroidery cloth sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Embroidery bear cartoon animal embroidery cloth sticker cute bag clothes sticker diy patch wholesale.Complete set (9 styles in total) $:19.99">
         <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
